--- a/package.json
+++ b/package.json
@@ -25,5 +25,14 @@
   "dependencies": {
     "wetfish-basic": "~0.3.1",
     "wetfish-server": "~0.1.1"
+  },
+  "devDependencies": {
+    "browserify": "^10.2.6",
+    "gulp": "^3.9.0",
+    "gulp-util": "^3.0.6",
+    "node-sass": "^3.2.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.2.3"
   }
 }
