--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
   },
   "homepage": "https://github.com/itsrachelfish/mlp",
   "dependencies": {
-    "wetfish-basic": "~0.3.1",
+    "dragondrop": "^0.4.2",
+    "wetfish-basic": "^0.7.1",
     "wetfish-server": "~0.1.1"
   },
   "devDependencies": {
     "browserify": "^10.2.6",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-util": "^3.0.6",
     "node-sass": "^3.2.0",
     "vinyl-buffer": "^1.0.0",
