--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "dragondrop": "^0.5.2",
     "wetfish-basic": "^0.7.7",
-    "wetfish-server": "~0.1.1"
+    "wetfish-server": "~0.1.1",
+    "whatwg-fetch": "git://github.com/github/fetch"
   },
   "devDependencies": {
     "browserify": "^10.2.6",
